Wordwrap breaks into pragraphs correctly
Some issues:
- If padding is added to the textarea, it doesn't work right,
so we have to find another way to add padding in there. A div
around the textarea will mean a rework
- A margin will push the whole thing over to the right, so that
won't work either
- It has to be added into #text-areas so it has the same size,
have to check if it does alright if it's hidden and/or absolute
valued
- Found textarea resize may need to be done when page is resized

--- a/static/styles.css
+++ b/static/styles.css
@@ -154,11 +154,17 @@ a:hover {
 	padding: 1px 4px 1px 0;
 }
 
+/* Maybe a div to add padding, once we figure that out */
+.ta-div {
+	padding: 1px 6px;
+}
+
 /* .text-row's are textareas */
+/* Wordwrap breaking isn't working with padding */
 .text-row {
 	outline: none;
 	display: block;
-	padding: 1px 6px;
+	padding: 1px 0px;
 	width: 100%;
 	font-size: 15px;
 	border: none;
